Add --add-opens which may or may not be needed