@@ -57,8 +57,14 @@ class HotswapAgentProgramPatcher : JavaProgramPatcher() {
             }
         }
 
-        javaParameters.vmParametersList?.add("-XX:+AllowEnhancedClassRedefinition");
-        javaParameters.vmParametersList?.add("-XX:HotswapAgent=fatjar");
+        val paramsList = javaParameters.vmParametersList;
+        paramsList.add("--add-opens java.base/sun.nio.ch=ALL-UNNAMED");
+        paramsList.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
+        paramsList.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED");
+        paramsList.add("--add-opens=java.base/java.io=ALL-UNNAMED");
+
+        paramsList.add("-XX:+AllowEnhancedClassRedefinition");
+        paramsList.add("-XX:HotswapAgent=fatjar");
     }
 
     private fun isJetbrainsRuntime(homePath: String): Boolean {
